some overflow problems fixed

--- a/src/app.styles.css
+++ b/src/app.styles.css
@@ -77,8 +77,8 @@
   padding-left: 10px;
 }
 .circle {
-  width: 14px;
-  height: 14px;
+  min-width: 14px;
+  min-height: 14px;
   border-radius: 50%;
   background-color: green;
 }
