--- a/src/index.css
+++ b/src/index.css
@@ -26,3 +26,10 @@ body {
   box-sizing: border-box;
   /* font-family: 'Courier New', Courier, monospace; */
 }
+.grid {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  gap:10px;
+  justify-items: center;
+  align-items: center;
+}
